<resources>
    <string name="app_name">ArrendApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_archivo">Archivo</string>
    <string name="title_activity_date">Fecha</string>
    <string name="title_activity_contrato">Contrato</string>
    <string name="title_activity_habitacion">Habitación</string>
    <string name="title_activity_acerca_de">Acerca de...</string>
    <string name="title_activity_crear_usuario">Crear Usuario</string>

    <string name="title_activity_ver_usuario">Ver Usuarios</string>
    <string name="title_activity_inmueble">Inmueble</string>
    <string name="title_activity_login">Login</string>

    <string name="direccion">Dirección</string>
    <string name="telefono">Telefono</string>
    <string name="tipo_inmueble">Tipo inmueble</string>
    <string name="ba_os_comunes">Baños Comunes</string>
    <string name="area">Area</string>
    <string name="archivo">Archivo</string>
    <string name="arrendador">Arrendador</string>
    <string name="habitaciones">Habitaciones</string>
    <string name="sala">Sala</string>
    <string name="sala_comedor">Sala Comedor</string>
    <string name="comedor">Comedor</string>
    <string name="lavadero">Lavadero</string>
    <string name="parqueadero">Parqueadero</string>
    <string name="precio">Precio</string>
    <string name="estrato">Estrato</string>
    <string name="capturas">Capturas</string>
    <string name="inmueble">Inmueble</string>
    <string name="reportes">Reportes</string>
    <string name="guardar">Guardar</string>
    <string name="patio">Patio</string>
    <string name="contrato">Contrato</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="desarrolladorUno">Alexander Grajales</string>
    <string name="desarrolladorDos">Cristian Mejia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="fecha_inicial">Fecha Inicial</string>
    <string name="estado">Estado</string>
    <string name="seleccione_la_fecha">Seleccione la fecha</string>
    <string name="Tipo_Archivo">Tipo Archivo</string>
    <string name="Ruta">Ruta</string>
    <string name="Descripcion">Descripción</string>
    <string name="Registro_de_Archivos">Registro de Archivos</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="SegundoApellido">Segundo Apellido</string>
    <string name="Nombre_De_Usuario">Nombre De Usuario</string>
    <string name="Clave">Clave</string>
    <string name="Telefono">Telefono</string>
    <string name="Celular">Celular</string>
    <string name="Direccion">Direccion</string>
    <string name="Edad">Edad</string>
    <string name="Tipo">Tipo Usuario</string>
    <string name="Genero">Genero</string>
    <string name="Correo">Correo</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Registro_de_Usuarios">Registro de Usuarios</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>
    <string name="registro_de_contratos">Registro de Contratos</string>
    <string name="agregar_archivos">Agregar archivos</string>
    <string name="registro_de_habitaciones">Registro de habitaciones</string>
    <string name="armario">Armario</string>
    <string name="ba_o">Baño</string>
    <string name="habitaci_n">Habitación</string>
    <string name="ver_usuarios">Ver usuarios</string>
    <string name="login">Login</string>
    <string name="ingresar">INGRESAR</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>


</resources>
