<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:title="@string/capturas">
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inmueble" />
        <item
            android:id="@+id/nav_archivo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/archivo" />
    </group>

    <item android:title="@string/reportes">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
