<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_archivo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.obando.mejia.arrendapp.Controlador.Activity.InmuebleActivity"
    tools:showIn="@layout/activity_inmueble">

    <LinearLayout
        android:id="@+id/layoutinmueble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registro de Inmuebles"
            android:textSize="30sp" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Arrendatario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Arrendatario"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Arrendador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/arrendador"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/TipoInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_inmueble" />


        <Spinner
            android:id="@+id/spTipoInmueble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/BanosComunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ba_os_comunes"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Archivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/archivo"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Estrato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estrato"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Contrato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrato"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/Patio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patio" />

        <Spinner
            android:id="@+id/spPatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/Parqueadero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parqueadero" />

        <Spinner
            android:id="@+id/spParqueadero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Lavadero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lavadero" />


        <Spinner
            android:id="@+id/spLavadero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Comedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comedor" />


        <Spinner
            android:id="@+id/spComedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/SalaComedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sala_comedor" />


        <Spinner
            android:id="@+id/spSalaComedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Sala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_inmueble" />


        <Spinner
            android:id="@+id/spSala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Habitaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/habitaciones"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/BtnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end|center_horizontal"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_save" />


    </LinearLayout>


</ScrollView>
