<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.obando.mejia.arrendapp.Controlador.Activity.CrearUsuarioActivity">


    <LinearLayout
        android:id="@+id/layoutinmueble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registro_de_Usuarios"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="335dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Nombre"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:inputType="text|textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Apellido"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/SegundoApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SegundoApellido"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/NombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre_De_Usuario"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Clave"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Telefono"
                android:inputType="number|phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Celular"
                android:inputType="number|phone" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Direccion"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Edad"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Genero"
                android:layout_below="@+id/titulo"
                android:layout_marginTop="16dp"/>

            <Spinner
                android:id="@+id/spGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Genero"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Tipo"
                android:layout_below="@+id/Genero"
                android:layout_marginTop="16dp"/>

            <Spinner
                android:id="@+id/spTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Tipo"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/BtnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|end|center_horizontal"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </LinearLayout>

</ScrollView>
