<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.obando.mejia.arrendapp.Controlador.Activity.LoginActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titulo">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/EdtNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre_De_Usuario"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUsuario"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/EdtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Clave"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/TxtRecuperarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtClave"
            android:layout_margin="16dp"
            android:text="@string/recuperar_contrase_a"
            android:visibility="gone"/>

        <Button
            android:id="@+id/BtnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TxtRecuperarContrasena"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ingresar"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BtnIngresar"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:id="@+id/TxtCrearUsuario"
            android:text="@string/title_activity_crear_usuario" />

    </RelativeLayout>

</RelativeLayout>
