<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="12dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/Nombre"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Nombre"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/Apellido"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/NombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Apellido"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/Nombre_De_Usuario"
                    android:textSize="16sp" />
            </RelativeLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>